  uses the attribute will always use 'sbml' as the prefix.  This 
  implementation is temporary to allow users to work with the
  attribute but complete implementation will require some
  internal redesign.  

Features that are not yet implemented:

- the "required" attribute for packages on the sbml element

- validation

- conversion to or from L3

======================================================================
Version 4.1.0-b1 (released 2009-09-04)
======================================================================

This is a beta version that includes support for reading
SBML L3 core as currently defined in the L3 specification 
Public Review Draft published 2009-08-22.

Features that are supported:

- reading an L3V1 SBML file

- getFoo() functions for all new attributes

- isSetFoo() functions for all newly required attributes
 
Features that are not yet implemented:

- the "required" attribute for packages on the sbml element

- the "sbml:units" attribute on the cn element

- the setFoo() functions

- validation

- conversion to or from L3

Note that since the type of both the spatialDimensions attribute
on a <Compartment> and the exponent attribute on a <Unit> have
changed to double there are functions

double  getSpatialDimensionsAsDouble()

double  getExponentAsDouble()

in addition to the existing

unsigned int getSpatialDimensions()

int getExponent().

The former functions will return L2 values as doubles 
whilst the latter will only return the value of the L3 
attribute if it can be cast appropriately.
 
The implementation works for all language bindings except
MATLAB and Octave.

======================================================================
Version 4.0.0 (released 2009-08-26)
======================================================================

* Dependency changes:

 - The language bindings now require SWIG 1.3.39 or later.  
   This is necessary to support Python 3.x.

* New features:
 
 - [Tracker issue #2835929]