@@ -2326,6 +2326,11 @@ protected:
   void checkUnitSyntax(unsigned int flag = 0);
 #endif
 
+  /**
+   * Checks that the given default namespace in the given element is valid.
+   * If the given default namespace is not valid, an error is logged.
+   */
+  void checkDefaultNamespace(const XMLNamespaces* xmlns, const std::string& elementName);
 
   /**
    * Checks the annotation does not declare an sbml namespace.
