@@ -2367,6 +2367,129 @@ START_TEST (test_ReadSBML_line_col_numbers)
 END_TEST
 
 
+START_TEST (test_ReadSBML_invalid_default_namespace )
+{
+  const char* valid = wrapXML
+  (
+  "<sbml xmlns=\"http://www.sbml.org/sbml/level2/version4\" level=\"2\" version=\"4\"> "
+  "   <model>"
+  "     <notes>"
+  "       <p xmlns=\"http://www.w3.org/1999/xhtml\">Some text.</p>"
+  "     </notes>"
+  "     <annotation>"
+  "       <example xmlns=\"http://www.example.org/\"/>"
+  "     </annotation>"
+  "     <listOfCompartments>"
+  "       <compartment id=\"compartmentOne\" size=\"1\"/>"
+  "     </listOfCompartments>"
+  "     <listOfSpecies>"
+  "       <species id=\"S1\" initialConcentration=\"1\" compartment=\"compartmentOne\"/>"
+  "       <species id=\"S2\" initialConcentration=\"0\" compartment=\"compartmentOne\"/>"
+  "     </listOfSpecies>"
+  "     <listOfParameters>"
+  "       <parameter id=\"t\" value = \"1\" units=\"second\"/>"
+  "     </listOfParameters>"
+  "     <listOfConstraints>"
+  "       <constraint sboTerm=\"SBO:0000064\">"
+  "         <math xmlns=\"http://www.w3.org/1998/Math/MathML\">"
+  "           <apply>"
+  "             <leq/>"
+  "             <ci> S1 </ci>"
+  "             <ci> t </ci>"
+  "           </apply>"
+  "         </math>"
+  "         <message>"
+  "           <p xmlns=\"http://www.w3.org/1999/xhtml\"> Species S1 is out of range </p>"
+  "         </message>"
+  "       </constraint>"
+  "     </listOfConstraints>"
+  "     <listOfReactions>"
+  "       <reaction id=\"reaction_1\" reversible=\"false\">"
+  "           <listOfReactants>"
+  "             <speciesReference species=\"S1\"/>"
+  "           </listOfReactants>"
+  "           <listOfProducts>"
+  "             <speciesReference species=\"S2\">"
+  "             </speciesReference>"
+  "           </listOfProducts>"
+  "       </reaction>"
+  "     </listOfReactions>"
+  "   </model>"
+  " </sbml>"
+  );
+
+  const char* invalid = wrapXML
+  (
+  "<sbml xmlns=\"http://www.sbml.org/sbml/level2/version4\" level=\"2\" version=\"4\"> "
+  "   <model xmlns=\"http://invalid/custom/default/uri\">"
+  "     <notes xmlns=\"http://invalid/custom/default/uri/in/notes\">"
+  "       <p xmlns=\"http://www.w3.org/1999/xhtml\">Some text.</p>"
+  "     </notes>"
+  "     <annotation xmlns=\"http://invalid/custom/default/uri/in/annotation\">"
+  "       <example xmlns=\"http://www.example.org/\"/>"
+  "     </annotation>"
+  "     <listOfCompartments>"
+  "       <compartment id=\"compartmentOne\" size=\"1\"/>"
+  "     </listOfCompartments>"
+  "     <listOfSpecies>"
+  "       <notes xmlns=\"http://invalid/custom/default/uri/in/notes\">"
+  "         <p xmlns=\"http://www.w3.org/1999/xhtml\">Some text.</p>"
+  "       </notes>"
+  "       <annotation xmlns=\"http://invalid/custom/default/uri/in/annotation\">"
+  "         <example xmlns=\"http://www.example.org/\"/>"
+  "       </annotation>"
+  "       <species id=\"S1\" initialConcentration=\"1\" compartment=\"compartmentOne\"/>"
+  "       <species id=\"S2\" initialConcentration=\"0\" compartment=\"compartmentOne\"/>"
+  "     </listOfSpecies>"
+  "     <listOfParameters>"
+  "       <parameter id=\"t\" value = \"1\" units=\"second\"/>"
+  "     </listOfParameters>"
+  "     <listOfConstraints>"
+  "       <constraint sboTerm=\"SBO:0000064\">"
+  "         <math xmlns=\"http://www.w3.org/1998/Math/MathML\">"
+  "           <apply>"
+  "             <leq/>"
+  "             <ci> S1 </ci>"
+  "             <ci> t </ci>"
+  "           </apply>"
+  "         </math>"
+  "         <message xmlns=\"http://invalid/custom/default/uri/in/message\">"
+  "           <p xmlns=\"http://www.w3.org/1999/xhtml\"> Species S1 is out of range </p>"
+  "         </message>"
+  "       </constraint>"
+  "     </listOfConstraints>"
+  "     <listOfReactions>"
+  "       <reaction id=\"reaction_1\" reversible=\"false\">"
+  "           <listOfReactants>"
+  "             <speciesReference xmlns=\"http://invalid/custom/default/uri\" species=\"S1\"/>"
+  "           </listOfReactants>"
+  "           <listOfProducts>"
+  "             <speciesReference species=\"S2\">"
+  "               <notes xmlns=\"http://invalid/custom/default/uri/in/notes\">"
+  "                 <p xmlns=\"http://www.w3.org/1999/xhtml\">Some text.</p>"
+  "               </notes>"
+  "               <annotation xmlns=\"http://invalid/custom/default/uri/in/annotation\">"
+  "                 <example xmlns=\"http://www.example.org/\"/>"
+  "               </annotation>"
+  "             </speciesReference>"
+  "           </listOfProducts>"
+  "       </reaction>"
+  "     </listOfReactions>"
+  "   </model>"
+  " </sbml>"
+  );
+
+  D = readSBMLFromString(valid);
+  fail_unless( SBMLDocument_getNumErrors(D) == 0 );
+
+  SBMLDocument_free(D);
+
+  D = readSBMLFromString(invalid);
+  fail_unless( SBMLDocument_getNumErrors(D) == 9 );
+}
+END_TEST
+
+
 Suite *
 create_suite_ReadSBML (void)
 {
@@ -2453,6 +2576,8 @@ create_suite_ReadSBML (void)
   tcase_add_test( tcase, test_ReadSBML_annotation_sbml_L2 );
   
   tcase_add_test( tcase, test_ReadSBML_line_col_numbers );
+
+  tcase_add_test( tcase, test_ReadSBML_invalid_default_namespace );
   
   suite_add_tcase(suite, tcase);
 
